feat: #5 make the questions.json file path configurable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ logging.level.root=OFF
 
 spring.shell.script.enabled=true
 spring.shell.interactive.enabled=true
+
+foreign-language-tester.questions-file-path=data/questions.json
