feat: #7 support native builds with GraalVM

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - name: Setup JDK
-        uses: actions/setup-java@v4
+      - name: Setup JDK with GraalVM
+        uses: graalvm/setup-graalvm@v1
         with:
+          distribution: 'liberica'
+          java-package: 'jdk'
           java-version: '22'
-          distribution: 'temurin'
-          architecture: x64
           cache: 'gradle'
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
       - name: Build
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build nativeCompile --no-daemon
