feat: #9 make sure that the questions are stored hierarchically in separate files related to separate topics

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=Foreign Language Tester
 logging.level.root=DEBUG
 spring.main.banner-mode=off
 
-foreign-language-tester.questions-file-path=data/questions.json
+foreign-language-tester.questions-folder-path=data/questions
