--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ logging.level.root=OFF
 spring.shell.script.enabled=true
 spring.shell.interactive.enabled=true
 
-foreign-language-tester.questions-file-path=data/questions.json
+foreign-language-tester.questions-folder-path=data/questions
